Actualización de versión de Nuxt.js, actualización de datos y soporte de idioma inglés y español agregado.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,5 +3,12 @@
 @tailwind utilities;
 
 .nuxt-link-exact-active {
-  @apply text-blue-500;
+  color: rgb(59, 130, 246);
 }
+
+/* Test background */
+body {
+  background-color: #ffffff;
+}
+
+
